--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 
+    <!--Top Menu-->
+
+    <div>
+        <img src="/bars-staggered-solid.svg" alt="">
+        <img src="/bars-staggered-solid.svg" alt="">
+
+    </div>
+
+    <!--Bottom Menu-->
+    <div>
+        <div>
+            <img src="/book-open-solid.svg" alt="">
+            <h6>Tafaseer</h6>
+        </div>
+
+        <div>
+            <img src="/book-open-solid.svg" alt="">
+            <h6>Aqeedah</h6>
+        </div>
+
+        <div>
+            <img src="/book-open-solid.svg" alt="">
+            <h6>Fiqh</h6>
+        </div>
+        
+        <div>
+            <img src="/book-open-solid.svg" alt="">
+            <h6>Akhlaq</h6>
+        </div>
+
+    </div>
+    
+</body>
+</html>
