--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!--Top Menu-->
 
     <div>
-        <img src="/bars-staggered-solid.svg" alt="">
-        <img src="/bars-staggered-solid.svg" alt="">
+        <img src="./bars-staggered-solid.svg" alt="">
+        <img src="./bars-staggered-solid.svg" alt="">
 
     </div>
 
