--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
     <!--Top Menu-->
 
     <div>
-        <img src="./bars-staggered-solid.svg" alt="">
-        <img src="./bars-staggered-solid.svg" alt="">
+        <img src="./bars-staggered-solid.svg" alt="" class="menu-right">
+        <img src="./bars-staggered-solid.svg" alt="" class="menu-left">
 
     </div>
 
     <!--Bottom Menu-->
-    <div>
-        <div>
-            <img src="/book-open-solid.svg" alt="">
+    <div class="btmmenurow>
+        <div class="btmmenuitem">
+            <img src="./book-open-solid.svg" alt="">
             <h6>Tafaseer</h6>
         </div>
 
-        <div>
-            <img src="/book-open-solid.svg" alt="">
+        <div class="btmmenuitem" >
+            <img src="./book-open-solid.svg" alt="">
             <h6>Aqeedah</h6>
         </div>
 
-        <div>
-            <img src="/book-open-solid.svg" alt="">
+        <div class="btmmenuitem">
+            <img src="./book-open-solid.svg" alt="">
             <h6>Fiqh</h6>
         </div>
         
-        <div>
-            <img src="/book-open-solid.svg" alt="">
+        <div class="btmmenuitem">
+            <img src="./book-open-solid.svg" alt="">
             <h6>Akhlaq</h6>
         </div>
 
