html css updated

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
@@ -16,7 +17,7 @@
     </div>
 
     <!--Bottom Menu-->
-    <div class="btmmenurow>
+    <div class="btmmenurow">
         <div class="btmmenuitem">
             <img src="./book-open-solid.svg" alt="">
             <h6>Tafaseer</h6>
@@ -37,6 +38,10 @@
             <h6>Akhlaq</h6>
         </div>
 
+        <div class="btmmenuitem">
+            <img class="btmsvg" src="./book-open-solid.svg" alt="">
+            <h6>Seerah</h6>
+        </div>
     </div>
     
 </body>
